# google_ngram

./: LICENSE  README.md  google_ngram.py  pyproject.toml
test/: test.py
