[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google_ngram"
version = "0.0.1"
authors = [
  { name="Jay VanPut", email="jayvanput@gmail.com" },
]
description = "Package to interact with the Google Ngram viewer API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]